Upload course files

--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,6 @@
-title            : HarvardX IDS Mod 1
+title            : IDS Module 1 Alt 3
 description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
 university       : DataCamp
 difficulty_level : 2
 time_needed      : 1 hour
+from             : 'r-base-prod:28'
