--- a/course.yml
+++ b/course.yml
@@ -1,6 +1,6 @@
-title            : IDS Module 1 Alt 3
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
-university       : DataCamp
-difficulty_level : 2
-time_needed      : 1 hour
+title            : PH125.1x
+description      : Find the complete course on edx.org.
+university       : HarvardX
+difficulty_level : 1
+time_needed      : 8 hours
 from             : 'r-base-prod:28'
