added link to edx page

--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
 title            : PH125.1x
-description      : Find the complete course on edx.org.
+description      : Find the complete course on edx.org at https://www.edx.org/course/data-science-r-basics-harvardx-ph125-1x.
 university       : HarvardX
 difficulty_level : 1
 time_needed      : 8 hours
