--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title            : Data Science R Basics
+title            : Data Science R Basics - Module 2
 description      : "Find the complete course on edx.org <a href='https://www.edx.org/course/data-science-r-basics-harvardx-ph125-1x'>here</a>."
 university       : HarvardX
 difficulty_level : 2
